fix navigation on mobile for doxygen 1.9.2 (#47)

--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -623,6 +623,16 @@ html.dark-mode iframe#MSearchResults {
         width: calc(100vw - 30px);
     }
 
+    label.main-menu-btn ~ #searchBoxPos1 {
+        top: 4px !important;
+    }
+
+    label.main-menu-btn ~ #searchBoxPos1 > #MSearchBox {
+        margin-top: 0;
+        margin-bottom: 0;
+        width: calc(100vw - 55px);
+    }
+
     #main-menu > li:last-child {
         float: none !important;
     }
